--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">🗄️</div>
-                    <h3>Database</h3>
+                    <h3>Databases</h3>
                     <p>MySQL, MongoDB, PostgreSQL</p>
                 </div>
             </div>
